<resources>
    <string name="app_name">SkinSavvy</string>
    <string name="app_name_desc">Stay Healthy</string>
    <string name="feature_scan">Scan Kulit</string>
    <string name="feature_instruction">Instruksi</string>
    <string name="feature_history">Riwayat</string>
    <string name="our_feature">Fitur Kami</string>
    <string name="article">Artikel</string>
    <string name="tips_tricks">Tips &amp; Tricks</string>
    <string name="search_solution">Mau tau gimana cara ngatasinya?</string>
    <string name="button_search_solution">Click Saya</string>
    <string name="isi_article"></string>
    <string name="article_tittle">Lorem ipsum dolor sit amet.</string>
    <string name="result_detection">Hasil</string>
    <string name="register_header">Register</string>
    <string name="register_title">Isi Data Dirimu</string>
    <string name="register_sub_title">Silahkan lengkapi data dirimu</string>
    <string name="name">Nama</string>
    <string name="gender">Jenis Kelamin</string>

    <string name="login">Login</string>
    <string name="user_email">Email</string>
    <string name="password">Password</string>
    <string name="male">Laki-Laki</string>
    <string name="female">Perempuan</string>
    <string name="do_you_have_account">Sudah punya akun?</string>
    <string name="login_here">Login disini</string>
    <string name="instruction_user">Instruksi Pengguna</string>
    <string name="sub_instruction">Scan Kulit</string>
    <string name="sub_instruction2">Pengambilan Gambar</string>
    <string name="instruction_1">Klik pada salah satu icon Scan Kulit yang ada di halaman utama</string>
    <string name="instruction_2">Jika kamera sudah terbuka, ambil gambar wajahmu yang ingin dideteksi permasalahannya atau ambil gambar dari galeri</string>
    <string name="instruction_3">Selanjutnya, kamu akan langsung berpindah ke halaman hasil untuk dapat melihat hasil deteksi permasalahan wajahmu</string>
    <string name="instruction_4">Untuk melihat solusi dari masalah yang terdeteksi, klik tombol ‘Click Saya’ yang ada di halaman hasil</string>
    <string name="no1">1. </string>
    <string name="no2">2. </string>
    <string name="no3">3. </string>
    <string name="no4">4. </string>
    <string name="for_you">Untuk Kamu</string>
    <string name="see_all">Lihat semua</string>

    <string name="navbar_home">Home</string>
    <string name="navbar_scan">Scan</string>
    <string name="no_article">Artikel belum tersedia</string>
    <string name="scan_navbar">Bottom Navigasi</string>

    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="result">Hasil</string>
    <string name="level">Level 1</string>
    <string name="clear">Clear</string>
    <string name="level_0">Level 0</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="question_solution">Mau tau cara mengatasinya?</string>
    <string name="Click_Me">Klik Saya</string>
    <string name="instruction_2_sub_title">Agar aplikasi dapat mendeteksi masalah wajah dengan baik, silahkan ikuti beberapa tips dalam mengambil gambar wajah dibawah ini</string>
    <string name="instruction_2_1">Silahkan ambil gambar pada bagian wajah yang ingin dideteksi seperti dari bagian depan, kanan atau kiri</string>
    <string name="instruction_2_2">Lakukan crop gambar menyesuaikan bentuk wajah</string>
    <string name="instruction_2_3">Lakukan pengambilan gambar ditempat yang terang</string>
    <string name="instruction_2_picture_example">Contoh Gambar</string>
</resources>