<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="23dp"
            android:outlineSpotShadowColor="@color/black"
            android:background="@drawable/back_button_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingLeft="15dp"
            app:srcCompat="@drawable/arrowback" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/custom_font_family"
            android:text="@string/instuction_user"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/kategori_border_bg"
            android:fontFamily="@font/inter_bold"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="60dp"
            android:paddingVertical="8dp"
            android:layout_marginStart="28dp"
            android:text="@string/sub_instruction"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_btn" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="28dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/category"
            tools:layout_editor_absoluteX="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/custom_font_family"
                android:text="@string/no1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="14sp"
                android:fontFamily="@font/custom_font_family"
                android:text="@string/instruction_1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/feature_scan_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/iv_feature_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/feature_background_shape"
                android:backgroundTint="@color/light_brown"
                android:contentDescription="@string/feature_scan"
                android:elevation="2dp"
                android:padding="4dp"
                android:src="@drawable/fitur_scan_kulit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/custom_font_family"
                android:text="@string/feature_scan"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="28dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/feature_scan_layout"
            tools:layout_editor_absoluteX="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/custom_font_family"
                android:text="@string/no2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="14sp"
                android:fontFamily="@font/custom_font_family"
                android:text="@string/instruction_2" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="28dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:layout_editor_absoluteX="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/custom_font_family"
                android:text="@string/no3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="14sp"
                android:fontFamily="@font/custom_font_family"
                android:text="@string/instruction_3" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="28dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            tools:layout_editor_absoluteX="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/custom_font_family"
                android:text="@string/no4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="14sp"
                android:fontFamily="@font/custom_font_family"
                android:text="@string/instruction_4" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/clickme"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />



    </androidx.constraintlayout.widget.ConstraintLayout>






</ScrollView>