<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/header_layout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:padding="28dp"
                android:background="@drawable/header_background_shape"
                tools:ignore="MissingConstraints" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:fontFamily="@font/custom_font_family"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name_desc"
                    android:fontFamily="@font/custom_font_family"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/feature_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="28dp"
                app:layout_constraintTop_toBottomOf="@+id/header_layout"
                tools:ignore="MissingConstraints" >

                <LinearLayout
                    android:id="@+id/feature_scan_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="22dp"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/iv_feature_scan"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/feature_background_shape"
                        android:backgroundTint="@color/light_brown"
                        android:src="@drawable/fitur_scan_kulit"
                        android:padding="4dp"
                        android:elevation="2dp"
                        android:layout_margin="2dp"
                        android:contentDescription="@string/feature_scan"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/feature_scan"
                        android:fontFamily="@font/inter_semibold"
                        android:textSize="12sp"
                        android:layout_marginTop="4dp"
                        android:textAlignment="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/feature_instruction_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="22dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_feature_instruction"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/feature_background_shape"
                        android:backgroundTint="@color/light_purple"
                        android:src="@drawable/fitur_instruksi"
                        android:padding="4dp"
                        android:elevation="2dp"
                        android:layout_margin="2dp"
                        android:contentDescription="@string/feature_instruction"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/feature_instruction"
                        android:fontFamily="@font/inter_semibold"
                        android:textSize="12sp"
                        android:layout_marginTop="4dp"
                        android:textAlignment="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/feature_history_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="22dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_feature_history"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/feature_background_shape"
                        android:src="@drawable/fitur_riwayat"
                        android:padding="4dp"
                        android:elevation="2dp"
                        android:layout_margin="2dp"
                        android:contentDescription="@string/feature_scan"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/feature_history"
                        android:fontFamily="@font/inter_semibold"
                        android:textSize="12sp"
                        android:layout_marginTop="4dp"
                        android:textAlignment="center"/>

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/rounded_shape"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/our_feature"
                android:paddingStart="26dp"
                android:paddingEnd="26dp"
                android:layout_marginStart="28dp"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/feature_layout"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_carousel_poster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_poster"
                tools:listitem="@layout/poster_item_layout"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_shape"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/for_you"
                android:paddingStart="26dp"
                android:paddingEnd="26dp"
                android:layout_margin="28dp"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/rv_carousel_poster"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <ProgressBar
                android:id="@+id/progressIndicator"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back_button_bg"
                android:padding="20dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_article"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_article"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_article"
                tools:listitem="@layout/article_item_layout"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/button_all_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textColor="@color/white"
                android:backgroundTint="@color/green"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_article"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_no_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_article"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_article"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:background="@drawable/border"
        android:orientation="horizontal"
        app:backgroundTint="@color/green"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:labelVisibilityMode="selected"
        app:itemRippleColor="@color/dull_green"
        app:itemActiveIndicatorStyle="@color/dull_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/menu_bottom_navbar" />



</androidx.constraintlayout.widget.ConstraintLayout>